fix lastname align

--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -85,6 +85,7 @@
       }
 
       .lastname {
+        text-align: center !important;
         order: 3;
       }
     }
